[tool.poetry]
name = "roboto-telegram"
version = "0.2.0"
description = "A type-hinted async Telegram bot library."
authors = ["Tarcísio Eduardo Moreira Crocomo <tarcisioe@pm.me>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "roboto" },
]

[tool.poetry.dependencies]
python = "^3.7"
typing-extensions = "^3.7.4"
typing-inspect = "^0.5.0"
validators = "^0.14.2"
asks = "^2.3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.8.1"

[tool.black]
skip_string_normalization = true

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
